--- a/.github/workflows/R2S-OpenWrt.yml
+++ b/.github/workflows/R2S-OpenWrt.yml
@@ -1,10 +1,18 @@
 name: R2S-OpenWrt
 
-on:
-#  schedule:
-    - cron: 5 9 * * 6
-#  watch:
-    types: started
+on: 
+  release:
+    types: [published]
+
+  push:
+    branches: 
+      - master
+
+  schedule:
+    - cron: 0 8 * * 5
+  
+  #watch:
+  #  types: [started]
 
 jobs:
   
